--- a/Source/Panama/View/SubmissionView.xaml
+++ b/Source/Panama/View/SubmissionView.xaml
@@ -24,10 +24,11 @@
         <!--<ItemsControl Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>-->
         <view:SimpleRowFilter />
 
-        <!-- Main data grid to display the tabular data              SortingCommand="{Binding Commands[GridSorting]}"-->
+        <!-- Main data grid to display the tabular data -->
         <con:DataGridExtended 
             x:Name="grid"
             Grid.Row="1" Grid.Column="0"
+            RowHeight="{Binding Config.DataGridRowHeight}"
             ItemsSource="{Binding Path=MainSource.View}"
             SelectedItem="{Binding SelectedItem}"
 
