--- a/Source/Panama/Resources/Dictionary/ControlDefault.xaml
+++ b/Source/Panama/Resources/Dictionary/ControlDefault.xaml
@@ -18,8 +18,8 @@
 
     <!-- Base style for TextBox  -->
     <Style TargetType="TextBox" BasedOn="{StaticResource BaseControl}">
-        <Setter Property="Foreground" Value="Blue" />
-        <Setter Property="Background" Value="#FFF8F8DF" />
+        <Setter Property="Foreground" Value="{StaticResource TextBoxForegoundBrush}" />
+        <Setter Property="Background" Value="{StaticResource TextBoxBackgroundBrush}" />
         <Setter Property="Margin" Value="6,0,6,6" />
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Style.Triggers>
