--- a/Source/Panama/View/ConfigView.xaml
+++ b/Source/Panama/View/ConfigView.xaml
@@ -25,19 +25,26 @@
         <ItemsControl Grid.Row="0" Grid.ColumnSpan="2" Style="{StaticResource ItemsControlSubSelection}" ItemsSource="{Binding Sections}"/>
 
         <DockPanel Grid.Row="1">
+            <DockPanel.Resources>
+                <Style TargetType="StackPanel">
+                    <Setter Property="Margin" Value="18,10"/>
+                </Style>
+
+                <Style TargetType="DockPanel">
+                    <Setter Property="Margin" Value="18,10"/>
+                </Style>
+            </DockPanel.Resources>
+            
             <!-- Section 1. General -->
             <StackPanel 
                 DockPanel.Dock="Top"
-                Margin="20,10"
                 Visibility="{Binding SelectedSection, Converter={cv:Int64ToVisibilityConverter}, ConverterParameter={StaticResource Int64One}}">
 
-                <GroupBox Header="{x:Static r:Strings.HeaderSettingsDateFormat}">
-                    <StackPanel>
-                        <ItemsControl Style="{StaticResource SelectTypeSingle}" ItemsSource="{Binding Path=DateFormats}" />
-                        <TextBox Margin="36,-16,36,0" Text="{Binding Config.DateFormat,UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding DateFormats[3].IsSelected}"/>
-                    </StackPanel>
-                </GroupBox>
-                <TextBlock Style="{StaticResource TextBlockMessage}" Text="{x:Static r:Strings.ConfigRowHeight}"/>
+                <TextBlock Style="{StaticResource TextBlockLabel}" Text="{x:Static r:Strings.HeaderSettingsDateFormat}"/>
+                <ItemsControl Style="{StaticResource SelectTypeSingle}" ItemsSource="{Binding Path=DateFormats}" />
+                <TextBox Margin="36,-16,36,0" Text="{Binding Config.DateFormat,UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding DateFormats[3].IsSelected}"/>
+                
+                <TextBlock Style="{StaticResource TextBlockSepLabel}" Text="{x:Static r:Strings.ConfigRowHeight}"/>
                 <!-- 24 is the defined MinRowHeight in Controls.xaml -->
                 <Slider Margin="2,4" Minimum="24" Maximum="42" TickPlacement="BottomRight" TickFrequency="1" Value="{Binding Path=Config.DataGridRowHeight}"/>
             </StackPanel>
@@ -45,7 +52,6 @@
             <!-- Section 2. Folders -->
             <StackPanel
                 DockPanel.Dock="Top"
-                Margin="20,10"
                 Visibility="{Binding SelectedSection, Converter={cv:Int64ToVisibilityConverter}, ConverterParameter={StaticResource Int64Two}}">
                 <con:FolderEdit Title="Title Root" Folder="{Binding Config.FolderTitleRoot}"/>
                 <con:FolderEdit Title="Title Version" Folder="{Binding Config.FolderTitleVersion}"/>
@@ -58,29 +64,27 @@
             <!-- Section 3. Colors -->
             <DockPanel 
                 DockPanel.Dock="Top"
-                Margin="20,10"
                 Visibility="{Binding SelectedSection, Converter={cv:Int64ToVisibilityConverter}, ConverterParameter={StaticResource Int64Three}}">
-                <con:ColorEdit DockPanel.Dock="Top" Title="Published Title" SelectedColor="{Binding Config.ColorPublishedTitle}"/>
-                <con:ColorEdit DockPanel.Dock="Top" Title="Submitted Title" SelectedColor="{Binding Config.ColorSubmittedTitle}" />
-                <con:ColorEdit DockPanel.Dock="Top" Title="Publisher In Submission Period" SelectedColor="{Binding Config.ColorPeriodPublisher}"/>
-                <Button DockPanel.Dock="Top" Content="Reset" Width="80" HorizontalAlignment="Left" Command="{Binding Commands[ResetColors]}"/>
+                <con:ColorPicker DockPanel.Dock="Top" Title="Published Title" SelectedColor="{Binding Config.ColorPublishedTitle}"/>
+                <con:ColorPicker DockPanel.Dock="Top" Title="Submitted Title" SelectedColor="{Binding Config.ColorSubmittedTitle}" />
+                <con:ColorPicker DockPanel.Dock="Top" Title="Submission Period" SelectedColor="{Binding Config.ColorPeriodPublisher}"/>
+                <Button DockPanel.Dock="Top" Content="Reset" MinHeight="21" Height="21" Width="78" Margin="0,4" HorizontalAlignment="Left" Command="{Binding Commands[ResetColors]}"/>
             </DockPanel>
             
             <!-- Section 4. Submission -->
             <DockPanel
                 DockPanel.Dock="Top"
-                Margin="20,10"
                 Visibility="{Binding SelectedSection, Converter={cv:Int64ToVisibilityConverter}, ConverterParameter={StaticResource Int64Four}}">
-                <Label DockPanel.Dock="Top" Content="Company"/>
-                <TextBox DockPanel.Dock="Top" Text="{Binding Config.SubmissionDocCompany}"/>
-                <Label DockPanel.Dock="Top" Content="Header"/>
-                <TextBox DockPanel.Dock="Top" Text="{Binding Config.SubmissionDocHeader}"/>
+                <TextBlock DockPanel.Dock="Top" Style="{StaticResource TextBlockLabel}" Text="Company"/>
+                <TextBox DockPanel.Dock="Top" Text="{Binding Config.SubmissionDocCompany}" Margin="0,4"/>
+                <TextBlock DockPanel.Dock="Top" Style="{StaticResource TextBlockLabel}" Text="Header"/>
+                <TextBox DockPanel.Dock="Top" Text="{Binding Config.SubmissionDocHeader}" Margin="0,4"/>
                 <con:YesNoEdit DockPanel.Dock="Top" Header="Include Page # in Header" IsYes="{Binding Config.SubmissionDocHeaderPages}" GroupName="HeaderPages"/>
-                <Label DockPanel.Dock="Top" Content="Footer"/>
-                <TextBox DockPanel.Dock="Top" Text="{Binding Config.SubmissionDocFooter}"/>
+                <TextBlock DockPanel.Dock="Top" Style="{StaticResource TextBlockLabel}" Text="Footer"/>
+                <TextBox DockPanel.Dock="Top" Text="{Binding Config.SubmissionDocFooter}" Margin="0,4"/>
                 <con:YesNoEdit DockPanel.Dock="Top" Header="Include Page # in Footer" IsYes="{Binding Config.SubmissionDocFooterPages}" GroupName="FooterPages"/>
-                <Label DockPanel.Dock="Top" Content="Document Text"/>
-                <TextBox DockPanel.Dock="Top" Style="{StaticResource TextBoxMultiFull}" Text="{Binding Config.SubmissionDocBody}"/>
+                <TextBlock DockPanel.Dock="Top" Style="{StaticResource TextBlockLabel}" Text="Document Text"/>
+                <TextBox DockPanel.Dock="Top" Style="{StaticResource TextBoxMultiFull}" Margin="0,4" Text="{Binding Config.SubmissionDocBody}"/>
                 
             </DockPanel>            
             
