--- a/Source/Panama/Resources/Dictionary/DataGrid.xaml
+++ b/Source/Panama/Resources/Dictionary/DataGrid.xaml
@@ -1,14 +1,18 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:con="clr-namespace:Restless.App.Panama.Controls">
 
+    <sys:Double x:Key="DataGridMinRowHeight">24</sys:Double>
+    <sys:Double x:Key="DataGridMaxRowHeight">42</sys:Double>
+    
     <!-- Defines a style to use for all DataGrid elements -->
     <Style TargetType="DataGrid" BasedOn="{StaticResource BaseControl}">
         <Setter Property="FontSize" Value="11"/>
         <Setter Property="Margin" Value="6" />
         <Setter Property="ColumnWidth" Value="*" />
-        <Setter Property="MinRowHeight" Value="24" />
+        <Setter Property="MinRowHeight" Value="{StaticResource DataGridMinRowHeight}" />
         <Setter Property="Background" Value="White" />
         <Setter Property="BorderBrush" Value="DarkGray" />
         <Setter Property="GridLinesVisibility" Value="None"/>
